# backend/routes/dates.go
@@ -17,4 +17,5 @@ func RegisterDateRoutes(e *echo.Echo, h* handlers.Handler) {
 
 	group.GET("/choiced", h.GetUserDateChoiceHandler, middleware.TGMiddleware())
 	group.GET("/all", h.GetAllUserChoiceHandler)
+	group.GET("/interval", h.GetIntervalHandler)
 }
